# auto-fdu

./: .env.example  .gitignore  README.md  launch_autoelearning.bat  pyproject.toml  requirements.txt
src/autoelearning/: __init__.py  agent_workflow.py  assignment_gate.py  auth.py  canvas.py  cli.py  config.py  desktop_app.py  pdf_export.py  reminders.py  storage.py  submission.py  workflow.py
src/autoelearning/static/: app.css  app.js  conversation.css
src/autoelearning/templates/: index.html
tests/: test_assignment_gate.py  test_storage.py
